# SPRO3-Group-11

./: README.md
Kicad/: SPRO Dashboard.kicad_pcb  SPRO Dashboard.kicad_prl  SPRO Dashboard.kicad_pro  SPRO Dashboard.kicad_sch
datasheets/: README  README.md
install/: setup.sh  setup.zsh
install/cpp_pkg/lib/cpp_pkg/: LIDAR_node  motor_node  node_template  test_node
install/cpp_pkg/share/cpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.xml
install/cpp_pkg/share/cpp_pkg/cmake/: cpp_pkgConfig-version.cmake  cpp_pkgConfig.cmake
install/cpp_pkg/share/cpp_pkg/environment/: ament_prefix_path.dsv  path.dsv
install/py_pkg/share/py_pkg/: package.sh
install/robot_bringup/share/robot_bringup/launch/: robot_launch.launch.py
ldrobot-lidar-ros2/ldlidar_node/params/: ldlidar.yaml
log/: latest_build
ros2_ws/install/: setup.bash  setup.ps1
ros2_ws/install/cpp_pkg/share/cpp_pkg/: package.sh
ros2_ws/install/py_pkg/lib/py_pkg/: imu_node  lidar_node  node_template
ros2_ws/install/py_pkg/share/py_pkg/: package.xml
ros2_ws/install/robot_bringup/share/robot_bringup/: local_setup.sh  package.sh  package.xml
src/cpp_pkg/: CMakeLists.txt
src/cpp_pkg/src/: LIDAR_node.cpp  motor_node.cpp  node_template.cpp  test_node.cpp
src/install/: setup.sh
src/install/cpp_pkg/share/cpp_pkg/: local_setup.sh  package.sh
src/log/: latest_build
src/py_pkg/: setup.py
src/py_pkg/py_pkg/: imu_node.py  lidar_node.py
src/robot_bringup/: CMakeLists.txt
src/robot_bringup/launch/: robot_launch.launch.py
(+4 files in other folders)
